# harmony-open-offhand

./: .gitignore  build-profile.json5  readme.md
AppScope/: app.json5
AppScope/resources/base/element/: string.json
AppScope/resources/en_US/element/: string.json
AppScope/resources/zh_CN/element/: string.json
design/: 01-总体方案.md  02-鸿蒙IME工程架构.md  03-中文拼音与英文输入引擎设计.md  04-语音输入与LLM润色设计.md  05-词库体系设计.md  06-配置中心与数据结构.md  07-隐私安全运维与测试.md  08-LLM后端服务设计.md  09-开发计划.md  10-librime拼音引擎集成方案.md  README.md
design/config/: builtin-models.json  inputmethod-subtypes.sample.json  lexicon-manifest.sample.json  llm-polish-policy.sample.json  module-extension.sample.json5  offhand-ime-config.sample.json  offhand.base.dict.yaml.sample  offhand_pinyin.custom.yaml.sample  offhand_pinyin.schema.yaml.sample
design/samples/: asr-bias-phrases.sample.jsonl  base-pinyin-lexicon.sample.tsv  english-core-words.sample.tsv  user-phrases.sample.jsonl
design/sensevoice/: README.md
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/cmake/: FindBoost.cmake  FindLevelDb.cmake  FindMarisa.cmake  FindOpencc.cmake  FindYamlCpp.cmake
entry/src/main/cpp/compat/boost/: regex.hpp
entry/src/main/cpp/rime/: RimeBridge.cpp  RimeSession.cpp  rime_bridge.h
entry/src/main/ets/entryability/: AbilityContextStore.ets  EntryAbility.ets
entry/src/main/ets/ime/ability/: OffhandInputMethodExtensionAbility.ets
entry/src/main/ets/ime/common/: ImeTypes.ets
entry/src/main/ets/ime/config/: BuiltinModels.ets  ConfigRepository.ets
entry/src/main/ets/ime/engine/english/: EnglishEngine.ets
entry/src/main/ets/ime/engine/langmodel/: HistoryBigram.ets  LanguageModelStore.ets  (+2 more)
entry/src/main/ets/ime/llm/: LlmPolishService.ets
entry/src/main/ets/ime/network/: RemoteHttpClient.ets
entry/src/main/ets/ime/observability/: ImeTelemetry.ets
entry/src/main/ets/ime/panel/: KeyboardPanel.ets
entry/src/main/ets/ime/runtime/: ImeRuntime.ets
entry/src/main/ets/ime/security/: PermissionManager.ets
entry/src/main/ets/ime/session/: DirectPinyinInput.ets  EditorContextAdapter.ets  KeyboardStateStore.ets  SecurityPolicy.ets  SessionManager.ets
entry/src/main/ets/ime/voice/: AsrProvider.ets  SenseVoiceLocalAsrProvider.ets  SenseVoiceModelInstaller.ets  VoiceCaptureService.ets
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/settings/: OffhandSettingsStore.ets
entry/src/main/ets/types/: libentry.d.ts
entry/src/main/resources/base/element/: string.json
entry/src/main/resources/base/profile/: input_method_config.json  main_pages.json
entry/src/main/resources/en_US/element/: string.json
entry/src/main/resources/rawfile/: inputmethod-subtypes.json  offhand-ime-config.json
entry/src/main/resources/zh_CN/element/: string.json
entry/src/test/: DirectPinyinInput.test.ets  EnglishEngine.test.ets  List.test.ets  PinyinNineKeyEngine.test.ets
(+9 files in other folders)
